# Kalman-and-Bayesian-Filters-in-Python

kalman/: pyproject.toml
kalman/notebooks/: 00-Preface.ipynb  01-g-h-filter.ipynb  table_of_contents.ipynb
