[tool.poetry]
name = "kalman"
version = "0.1.0"
description = ""
authors = ["nathanyee <nathanielcyee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
sympy = "^1.12.1"
filterpy = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
